--- a/mystyle.css
+++ b/mystyle.css
@@ -10,7 +10,7 @@
     overflow-y: scroll;
     display: inline-block;
     direction: ltr;
-    background: rgba(0, 0, 255, 0.3); /* Adding a transparent blue background */
+    /* background: rgba(0, 0, 255, 0.3); Adding a transparent blue background */
     position: relative;
 }
 
@@ -52,6 +52,17 @@ svg {
     height: 600px;
 }
 
-#timeline {
-    height: 240px;
+#country {
+    overflow-y: auto; 
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+    width: 100%; 
+    max-height: 500px; 
+    box-sizing: border-box; 
+}
+#country img {
+    width: 125px; 
+    height: 125px; 
+    object-fit: contain; 
 }
