--- a/mystyle.css
+++ b/mystyle.css
@@ -2,6 +2,7 @@
     width: 100%;
     height: 100%;
     overflow: auto;
+    display: flex;
 }
 
 #nbaplayers {
@@ -58,11 +59,11 @@ svg {
     flex-wrap: wrap;
     gap: 10px;
     width: 100%; 
-    max-height: 500px; 
+    height: 100%; 
     box-sizing: border-box; 
 }
 #country img {
     width: 125px; 
-    height: 125px; 
+    height: 250px; 
     object-fit: contain; 
 }
